--- a/src/App.css
+++ b/src/App.css
@@ -17,10 +17,12 @@
     justify-content: center;
 }
 .deleteButton{
+    width: 132px;
     padding: 10px;
     border-radius: 15px;
     border: none;
     background-color: rgb(199, 195, 195);
+    font-size: 15px;
 }
 .deleteButton:hover{
     background-color: rgb(2, 251, 2);
@@ -42,4 +44,8 @@
     background-color: white;
     font-size: 28px;
     color: rgb(85, 255, 0);
+}
+.randomCourses{
+    text-align: center;
+    margin-bottom: 20px;
 }
